Added react-router to Stripe & proxy URL to Json

--- a/background_check/package.json
+++ b/background_check/package.json
@@ -27,6 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "https://backgroundcheck.netlify.com",
   "browserslist": {
     "production": [
       ">0.2%",
